// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preparePriorityRuleGroupForForm condition and rules are added into results, with parsed keys and values 1`] = `
Object {
  "condition": "AND",
  "rules": Array [
    Object {
      "key": "firstTag",
      "operator": "equals",
      "value": "foo",
      "valueType": "string",
    },
    Object {
      "key": "secondTag",
      "operator": "contains",
      "value": "bar",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForForm empty values are represented as an empty string string 1`] = `
Object {
  "condition": "AND",
  "rules": Array [
    Object {
      "key": "thirdTag",
      "operator": "is_empty",
      "value": "",
      "valueType": "string",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving condition and rules are added into results, with dot-separated key and value 1`] = `
Object {
  "condition": "AND",
  "rules": Array [
    Object {
      "operator": "equals",
      "type": "string",
      "value": "firstTag.foo",
    },
    Object {
      "operator": "contains",
      "type": "string",
      "value": "secondTag.bar",
    },
    Object {
      "operator": "==",
      "type": "integer",
      "value": "fourthTag.123",
    },
    Object {
      "operator": "<=",
      "type": "integer",
      "value": "fifthTag.456",
    },
  ],
}
`;

exports[`preparePriorityRuleGroupForSaving empty values are represented as a space in dot-separated string 1`] = `
Object {
  "condition": "AND",
  "rules": Array [
    Object {
      "operator": "is_empty",
      "type": "string",
      "value": "thirdTag. ",
    },
  ],
}
`;
